--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -46,6 +46,10 @@
     <p *ngIf="registerForm.get('email')?.hasError('email')" class="text-red-400">
       Please enter a valid email
     </p>
+
+    <p *ngIf="registerForm.get('email')?.hasError('emailTaken')" class="text-red-400">
+      Email is already taken
+    </p>
   </div>
   <!-- Age -->
   <div class="mb-3">
@@ -99,6 +103,13 @@
     <input formControlName="confirmPassword" type="password"
       class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
       placeholder="Confirm Password" />
+
+    <p *ngIf="
+        registerForm.get('confirmPassword')?.hasError('noMatch') && 
+        registerForm.get('confirmPassword')?.touched
+      " class="text-red-400">
+      Passwords do not match
+    </p>
   </div>
   <!-- Phone Number -->
   <div class="mb-3">
