--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,28 +1,28 @@
 <header id="header" class="bg-secondary">
     <nav class="container mx-auto flex justify-start items-center py-8 px-4">
       <!-- App Name -->
-      <a class="text-3xl text-indigo-400 font-bold uppercase mr-4" href="index.html">ClipZ</a>
+      <a class="text-3xl text-indigo-400 font-bold uppercase mr-4" [routerLink]="['/']">ClipZ</a>
   
       <div class="flex flex-grow items-center">
         <!-- Primary Navigation -->
         <ul class="flex flex-row mt-1">
           <!-- Navigation Links -->
-          <li *ngIf="!(auth.isAuthenticated$ | async); else authLinks">
+          <li routerLinkActive="text-indigo-400" *ngIf="!(auth.isAuthenticated$ | async); else authLinks">
             <a class="px-2" href="#" (click)="onOpenModal($event)">Login / Register</a>
           </li>
           <ng-template #authLinks>
-            <li>
-              <a class="px-2" href="#">Manage</a>
+            <li routerLinkActive="text-indigo-400" [routerLinkActiveOptions]="{exact: true}">
+              <a class="px-2" [routerLink]="['/manage']">Manage</a>
             </li>
-            <li>
-              <a class="px-2" href="#">Upload</a>
+            <li routerLinkActive="text-indigo-400" [routerLinkActiveOptions]="{exact: true}">
+              <a class="px-2" [routerLink]="['./upload']">Upload</a>
             </li>
             <li>
               <a class="px-2" href="#" (click)="onLogout($event)">Logout</a>
             </li>
           </ng-template>
-          <li>
-            <a class="px-2" href="about.html">About</a>
+          <li routerLinkActive="text-indigo-400">
+            <a class="px-2" [routerLink]="['/about']">About</a>
           </li>
         </ul>
         <!-- Language Switcher -->
