--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -12,7 +12,7 @@
           </li>
           <ng-template #authLinks>
             <li routerLinkActive="text-indigo-400" [routerLinkActiveOptions]="{exact: true}">
-              <a class="px-2" [routerLink]="['/manage']">Manage</a>
+              <a class="px-2" [routerLink]="['/manage']" [queryParams]="{ sort: '1' }">Manage</a>
             </li>
             <li routerLinkActive="text-indigo-400" [routerLinkActiveOptions]="{exact: true}">
               <a class="px-2" [routerLink]="['./upload']">Upload</a>
