--- a/src/app/clip/clip.component.html
+++ b/src/app/clip/clip.component.html
@@ -11,9 +11,7 @@
       <!-- Video Editor -->
       <div class="relative">
         <!-- Video Player -->
-        <video controls 
-          class="video-js vjs-theme-forest mx-auto"
-          data-setup="{}">
+        <video controls class="video-js vjs-theme-forest mx-auto" data-setup="{}">
           <source src="assets/video/hero.webm" type="video/webm">
         </video>
       </div>
@@ -28,10 +26,10 @@
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
       <a [routerLink]="['/clip', id]"
         class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary transform hover:-translate-y-2 hover:shadow-2xl transition duration-300">
-  
+
         <!-- Image -->
         <img class="card-img-top rounded-tl-2xl w-full" src="assets/img/1.jpg">
-  
+
         <!-- Shape -->
         <div class="relative">
           <div class="absolute pointer-events-none bottom-full w-full bg-secondary text-white">
@@ -43,10 +41,10 @@
             </div>
           </div>
         </div>
-  
+
         <!-- Body -->
         <div class="p-8">
-  
+
           <!-- Heading -->
           <h2 class="text-3xl mb-2">
             Game Highlighting Clip
@@ -54,19 +52,19 @@
 
           <!-- Name & Date -->
           <p class="mb-0">
-            Luis Ramirez &#183; 
+            Luis Ramirez &#183;
             <span class="text-gray-400">March 31, 2020</span>
           </p>
-  
+
         </div>
-  
+
       </a>
       <a href="#"
         class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary transform hover:-translate-y-2 hover:shadow-2xl transition duration-300">
-  
+
         <!-- Image -->
         <img class="card-img-top rounded-tl-2xl w-full" src="assets/img/2.jpg">
-  
+
         <!-- Shape -->
         <div class="relative">
           <div class="absolute pointer-events-none bottom-full w-full bg-secondary text-white">
@@ -78,10 +76,10 @@
             </div>
           </div>
         </div>
-  
+
         <!-- Body -->
         <div class="p-8">
-  
+
           <!-- Heading -->
           <h2 class="text-3xl mb-2">
             Game Highlighting Clip
@@ -89,19 +87,19 @@
 
           <!-- Name & Date -->
           <p class="mb-0">
-            Luis Ramirez &#183; 
+            Luis Ramirez &#183;
             <span class="text-gray-400">March 31, 2020</span>
           </p>
-  
+
         </div>
-  
+
       </a>
       <a href="#"
         class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary transform hover:-translate-y-2 hover:shadow-2xl transition duration-300">
-  
+
         <!-- Image -->
         <img class="card-img-top rounded-tl-2xl w-full" src="assets/img/3.jpg">
-  
+
         <!-- Shape -->
         <div class="relative">
           <div class="absolute pointer-events-none bottom-full w-full bg-secondary text-white">
@@ -113,10 +111,10 @@
             </div>
           </div>
         </div>
-  
+
         <!-- Body -->
         <div class="p-8">
-  
+
           <!-- Heading -->
           <h2 class="text-3xl mb-2">
             Game Highlighting Clip
@@ -124,12 +122,12 @@
 
           <!-- Name & Date -->
           <p class="mb-0">
-            Luis Ramirez &#183; 
+            Luis Ramirez &#183;
             <span class="text-gray-400">March 31, 2020</span>
           </p>
-  
+
         </div>
-  
+
       </a>
     </div>
   </div>
