--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,29 +34,35 @@ body {
   transform: scale(0) rotate(0deg) translate(-50%, -50%);
   animation: cube 8s ease-in forwards infinite;
 }
+
 .cube:nth-child(2n) {
   border-color: #fff;
 }
+
 .cube:nth-child(2) {
   animation-delay: 1s;
   left: 25%;
   top: 40%;
 }
+
 .cube:nth-child(3) {
   animation-delay: 3s;
   left: 80%;
   top: 50%;
 }
+
 .cube:nth-child(4) {
   animation-delay: 5s;
   left: 90%;
   top: 10%;
 }
+
 .cube:nth-child(5) {
   animation-delay: 7s;
   left: 10%;
   top: 50%;
 }
+
 .cube:nth-child(6) {
   animation-delay: 9s;
   left: 50%;
@@ -93,7 +99,7 @@ body {
   height: 6em;
 }
 
-.vjs-button > .vjs-icon-placeholder:before {
+.vjs-button>.vjs-icon-placeholder:before {
   font-size: 3.8em;
 }
 
@@ -103,27 +109,17 @@ body {
 
 .vjs-theme-forest .vjs-volume-bar.vjs-slider-horizontal,
 .vjs-theme-forest .vjs-volume-panel,
-.vjs-theme-forest
-  .vjs-volume-panel.vjs-volume-panel-horizontal.vjs-slider-active,
+.vjs-theme-forest .vjs-volume-panel.vjs-volume-panel-horizontal.vjs-slider-active,
 .vjs-theme-forest .vjs-volume-panel.vjs-volume-panel-horizontal:hover,
-.vjs-theme-forest
-  .vjs-volume-panel:active
-  .vjs-volume-control.vjs-volume-horizontal,
+.vjs-theme-forest .vjs-volume-panel:active .vjs-volume-control.vjs-volume-horizontal,
 .vjs-theme-forest .vjs-volume-panel:hover,
-.vjs-theme-forest
-  .vjs-volume-panel:hover
-  .vjs-volume-control.vjs-volume-horizontal {
+.vjs-theme-forest .vjs-volume-panel:hover .vjs-volume-control.vjs-volume-horizontal {
   width: 8em;
 }
 
-.video-js
-  .vjs-volume-panel
-  .vjs-volume-control.vjs-slider-active.vjs-volume-horizontal,
+.video-js .vjs-volume-panel .vjs-volume-control.vjs-slider-active.vjs-volume-horizontal,
 .video-js .vjs-volume-panel .vjs-volume-control:active.vjs-volume-horizontal,
-.video-js
-  .vjs-volume-panel.vjs-hover
-  .vjs-mute-control
-  ~ .vjs-volume-control.vjs-volume-horizontal,
+.video-js .vjs-volume-panel.vjs-hover .vjs-mute-control~.vjs-volume-control.vjs-volume-horizontal,
 .video-js .vjs-volume-panel.vjs-hover .vjs-volume-control.vjs-volume-horizontal,
 .video-js .vjs-volume-panel:active .vjs-volume-control.vjs-volume-horizontal,
 .video-js .vjs-volume-panel:focus .vjs-volume-control.vjs-volume-horizontal {
@@ -146,10 +142,7 @@ body {
   height: 2em;
 }
 
-.video-js
-  .vjs-progress-control:hover
-  .vjs-progress-holder:focus
-  .vjs-time-tooltip,
+.video-js .vjs-progress-control:hover .vjs-progress-holder:focus .vjs-time-tooltip,
 .video-js .vjs-progress-control:hover .vjs-time-tooltip {
   font-size: 2em;
 }
@@ -161,6 +154,7 @@ body {
 .video-js .vjs-time-control {
   font-size: 2em;
 }
+
 /* Video.js CSS END */
 
 .ghost {
@@ -180,12 +174,15 @@ body {
   transform: rotate(45deg);
   z-index: -1;
 }
+
 .corner.two {
   margin-left: 35px;
 }
+
 .corner.three {
   margin-left: 70px;
 }
+
 .corner.four {
   margin-left: 105px;
 }
@@ -200,12 +197,15 @@ body {
   -webkit-transform: rotate(45deg) translateX(4px) translateY(4px);
   transform: rotate(45deg) translateX(4px) translateY(4px);
 }
+
 .over.two {
   margin-left: 35px;
 }
+
 .over.three {
   margin-left: 70px;
 }
+
 .over.four {
   margin-left: 105px;
 }
@@ -221,6 +221,7 @@ body {
     -webkit-transform: scale(1) translateY(0px);
     transform: scale(1) translateY(0px);
   }
+
   100% {
     -webkit-transform: scale(0.8) translateY(75px);
     transform: scale(0.8) translateY(75px);
@@ -232,26 +233,31 @@ body {
     -webkit-transform: scale(1) translateY(0px);
     transform: scale(1) translateY(0px);
   }
+
   100% {
     -webkit-transform: scale(0.8) translateY(75px);
     transform: scale(0.8) translateY(75px);
   }
 }
+
 @-webkit-keyframes ghost {
   0% {
     -webkit-transform: scale(1) translateY(0px);
     transform: scale(1) translateY(0px);
   }
+
   100% {
     -webkit-transform: scale(1) translateY(-40px);
     transform: scale(1) translateY(-40px);
   }
 }
+
 @keyframes ghost {
   0% {
     -webkit-transform: scale(1) translateY(0px);
     transform: scale(1) translateY(0px);
   }
+
   100% {
     -webkit-transform: scale(1) translateY(-40px);
     transform: scale(1) translateY(-40px);
@@ -262,9 +268,11 @@ body {
   0% {
     background-position: 0% 50%;
   }
+
   50% {
     background-position: 100% 50%;
   }
+
   100% {
     background-position: 0% 50%;
   }
@@ -275,6 +283,7 @@ body {
     transform: scale(0) rotate(0deg) translate(-50%, -50%);
     opacity: 1;
   }
+
   to {
     transform: scale(20) rotate(960deg) translate(-50%, -50%);
     opacity: 0;
