--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -7,20 +7,37 @@
       <p *ngIf="showPercentage">{{ percentage | percent }}</p>
     </app-alert>
 
-        <!-- Video Editor -->
+    <ng-container>
+      <span
+        *ngIf="!ffmpeg.isReady; else uploadEditorCtr"
+        class="material-icons text-center text-6xl p-8 animate-spin"
+      >
+        Settings
+      </span>
+    </ng-container>
 
-    <form *ngIf="next; else drop" [formGroup]="uploadForm" (ngSubmit)="onUploadFile()">
+    <ng-template #uploadEditorCtr>
+      <!-- Video Editor -->
+
+      <form
+        *ngIf="next; else drop"
+        [formGroup]="uploadForm"
+        (ngSubmit)="onUploadFile()"
+      >
         <!-- Screenshots -->
         <h2 class="mb-4 text-xl">Select a Thumbnail</h2>
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
-          <div class="border-8 cursor-pointer border-green-400">
-            <img src="assets/img/1.jpg" />
-          </div>
-          <div class="border-8 cursor-pointer border-transparent">
-            <img src="assets/img/2.jpg" />
-          </div>
-          <div class="border-8 cursor-pointer border-transparent">
-            <img src="assets/img/3.jpg" />
+          <div
+            *ngFor="let screenshot of screenshots"
+            class="border-8 cursor-pointer"
+            [ngClass]="{
+              'border-green-400': screenshot === selectedScreenshot,
+              'border-transparent': screenshot !== selectedScreenshot
+            }"
+            (click)="selectedScreenshot = screenshot"
+          >
+            <!-- <img [src]="screenshot | safeURL" /> -->
+            <img [src]="screenshot" />
           </div>
         </div>
 
@@ -57,7 +74,10 @@
         <div class="mt-4 text-right">
           <button
             [disabled]="inSubmission"
-            [ngClass]="{ 'opacity-50 cursor-not-allowed': inSubmission, 'hover:bg-indigo-700': !inSubmission }"
+            [ngClass]="{
+              'opacity-50 cursor-not-allowed': inSubmission,
+              'hover:bg-indigo-700': !inSubmission
+            }"
             type="submit"
             class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 focus:outline-none"
           >
@@ -65,28 +85,32 @@
           </button>
         </div>
       </form>
-
-
-    <!-- Upload Dropbox -->
-    <ng-template #drop>
-      <!-- Form -->
-      <div
-      appEventBlock
-      (dragend)="isDraggingOver = false"
-      (dragover)="isDraggingOver = true"
-      (dragenter)="isDraggingOver = true"
-      (dragleave)="isDraggingOver = false"
-      (mouseleave)="isDraggingOver = false"
-      (drop)="storeFile($event)"
-      [ngClass]="{
-        'bg-indigo-400 border-indigo-400 border-solid': isDraggingOver
-      }"
-      class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed border-gray-400 transition duration-500 hover:text-white hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl"
-    >
-      <h5>Drop your file here (mp4 only!)</h5>
-
-    </div>
-    <input type="file" class="mt-4" (change)="storeFile($event)">
+      <!-- Upload Dropbox -->
+      <ng-template #drop>
+        <!-- Form -->
+        <div
+          appEventBlock
+          (dragend)="isDraggingOver = false"
+          (dragover)="isDraggingOver = true"
+          (dragenter)="isDraggingOver = true"
+          (dragleave)="isDraggingOver = false"
+          (mouseleave)="isDraggingOver = false"
+          (drop)="storeFile($event)"
+          [ngClass]="{
+            'bg-indigo-400 border-indigo-400 border-solid': isDraggingOver
+          }"
+          class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed border-gray-400 transition duration-500 hover:text-white hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl"
+        >
+          <h5>Drop your file here (mp4 only!)</h5>
+          <span
+            *ngIf="ffmpeg.isRunning"
+            class="material-icons text-center text-6xl p-8 animate-spin"
+          >
+            Autorenew
+          </span>
+        </div>
+        <input type="file" class="mt-4" (change)="storeFile($event)" />
+      </ng-template>
     </ng-template>
   </div>
 </section>
